# slint-yolov8-demo

./: .gitignore  Cargo.toml
src/yolov8engine/: mod.rs
